Use Maven Wrapper